--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <body>
 
-<h1>Elchins Pedofils</h1>
-<p>Tevi Apedis</p>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
 </body>
 </html>
